--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2753,6 +2753,10 @@ input, select, textarea {
 				background-color: #A1A7DA;
 			}
 
+			.tiles article.style13 > .image:before {
+				background-color: #DD8757;
+			}
+
 			body:not(.is-touch) .tiles article:hover > .image {
 				-moz-transform: scale(1.1);
 				-webkit-transform: scale(1.1);
